tests/sumo/devices/rerouting/personTrip/errors/stops_disconnected/errors.sumo.agg
Error: No connection found between busStop 'stopA_E' and busStop 'stopC_E' for person 'p0'.
Quitting (on error).
Warning: 1 total messages of type: No connection between % '%' and % '%' found.
